@@ -1,10 +1,17 @@
+2000-08-27  Jeffrey Stedfast  <fejj@helixcode.com>
+
+	* mail-crypto.c (mail_crypto_openpgp_clearsign): New crypto
+	function to clearsign plaintext
+
 2000-08-27  Ariel Rios  <ariel@arcavia.com>
 
-	* folder-browser-factory.c (control_activate): Added bonobo menu handler for mark_all_deleted function.
+	* folder-browser-factory.c (control_activate): Added bonobo menu
+	handler for mark_all_deleted function.
 
-	* mail.h: (mark_all_deleted): Added prototype. 
+	* mail.h: (mark_all_deleted): Added prototype.
 
-	* mail-callbacks.c (mark_all_deleted): Added callback for marking all displayed messages in a folder as deleted.
+	* mail-callbacks.c (mark_all_deleted): Added callback for marking
+	all displayed messages in a folder as deleted.
 
 2000-08-26  Ettore Perazzoli  <ettore@helixcode.com>
 
